--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,4 @@ group = com.enonic.app
 projectName = corporate.theme
 appName = com.enonic.app.corporate.theme
 xpVersion = 7.0.0-RC4
-version = 2.1.0
+version = 2.1.1-CENTRUM
