--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 app {
 	name = project.appName
-	displayName = 'Corporate Theme'
+	displayName = 'Centrum Elektriske'
 	vendorName = 'Enonic AS'
 	vendorUrl = 'https://enonic.com'
 	systemVersion = "${xpVersion}"
@@ -19,9 +19,9 @@ dependencies {
 
 	include 'com.enonic.lib:lib-landingpage:2.0.0'
 	include 'com.enonic.lib:lib-menu:3.0.0-RC1'
-	include "com.enonic.lib:lib-thymeleaf:2.0.0-RC1"
-	include 'com.enonic.lib:lib-urlredirect:3.0.0-RC1'
-	include 'com.enonic.lib:lib-util:2.0.0-RC1'
+	include "com.enonic.lib:lib-thymeleaf:2.0.0"
+	include 'com.enonic.lib:lib-urlredirect:3.0.0'
+	include 'com.enonic.lib:lib-util:2.0.0'
 
 	webjar 'org.webjars:momentjs:2.20.1'
 }
